--- a/3d/demoPlan.org
+++ b/3d/demoPlan.org
@@ -1168,7 +1168,10 @@ In my case, I’ve decided to implement the 2nd solution for this tutorial
 
 
 *** TODO v1.1-v2.0 improve engine,optimize, add junior functions(3.5w lines)
+
+
 **** TODO [#B] support WebGL 2.0 and can fallback to WebGL 1.0
+
 
 - Use Immutable Textures When Available (use EXT_texture_storage extension to use texStorage* command instead of
 texImage* command)
@@ -1203,8 +1206,7 @@ will populate only the alpha and green channels in a sample, respectively. To su
 expansion, and the associ- ated additional memory and texture upload performance costs, can be avoided by developers
 keen for clock cycles by simply using RED textures in place of LUMINANCE and RG in place of LUMINANCE_ALPHA when using
 ANGLE with APIs that support them. 
-
-
+**** TODO [#B] volume light
 **** TODO [#B] advance collision and physics
 ***** TODO collision
 ****** TODO support mesh collider
