--- a/temp.org
+++ b/temp.org
@@ -1,100 +1,87 @@
-# 功能模块
-- 单元测试
-- 纹理计算
-- 标注
-- 空间计算
+* 离职
+完全按自己意愿开发引擎
+
+建立社区
+
+打造自己的影响力
+
+打造自己的产品和公司
 
 
-## 单元测试
-搭建了karma+typescript+jasmine测试环境。
-
-## 纹理计算
-
-## 标注
-### 整体标注
-在3d视图、俯视图下，显示整体模型的标注。
-### 多标注
-在平面视图下，显示门标注和内部空间标注。
+有生存压力（还好）
 
 
-
-## 空间计算
-### 根据板（点）计算空间
-- 算法
-先获得所有板的点；
-根据任意两点，计算所有的空间;
-剔除几乎为空的，或者与板相交的空间；
-剔除几乎相等的空间；
-
-剩下的空间就是计算的空间结果
+完全靠自己
 
 
-### 计算板、空间、子柜体的相邻关系
-- 算法
-如果互相的coplane相交，就是相邻的
+家庭不稳定
+认可度低
+
+压力一般
+
+完全是自己来开拓
 
 
 
-### 返回选中的空间
-- 算法
-根据相邻关系，并剔除太小的空间（可能是由缝隙产生的空间），返回选中的空间
-
-### 存在的问题
-- 由于是根据点来算空间的，如果组成空间的点不存在，则不能计算出空间
-e.g.: 如果上板depth较大而下板depth较小（它们的width,height都相同），则只能取出较大的空间（相当于两个上板组成的空间），而不能取到较小的空间（相当于两个下板组成的空间）。
-
-- 由于pdms数据的问题，造成子柜体的box3大于实际的由它的板组成的box3，这样会造成子柜体的相邻关系计算错误。
-e.g.: 子柜体A和px方向相邻的板B（B与组成子柜体的px方向的板相邻），这时因为如果子柜体的box3->px方向的coplane与B的px方向（正常应该是与B的nx方向）的coplane相交，则B的相邻关系为：
-px:A
-而正常情况下，B的相邻关系应该为：
-nx:A
-# 功能模块
-- 单元测试
-- 纹理计算
-- 标注
-- 空间计算
+可继续搞酵素和自由能源
 
 
-## 单元测试
-搭建了karma+typescript+jasmine测试环境。
-
-## 纹理计算
-
-## 标注
-### 整体标注
-在3d视图、俯视图下，显示整体模型的标注。
-### 多标注
-在平面视图下，显示门标注和内部空间标注。
+可自己做菜
 
 
 
-## 空间计算
-### 根据板（点）计算空间
-- 算法
-先获得所有板的点；
-根据任意两点，计算所有的空间;
-剔除几乎为空的，或者与板相交的空间；
-剔除几乎相等的空间；
 
-剩下的空间就是计算的空间结果
+需要时间来慢慢积累影响力
 
 
-### 计算板、空间、子柜体的相邻关系
-- 算法
-如果互相的coplane相交，就是相邻的
+长时间单独搞
+
+短时间内不能再去公司（1年内）
+影响职业生涯
 
 
+开始创业生涯
 
-### 返回选中的空间
-- 算法
-根据相邻关系，并剔除太小的空间（可能是由缝隙产生的空间），返回选中的空间
 
-### 存在的问题
-- 由于是根据点来算空间的，如果组成空间的点不存在，则不能计算出空间
-e.g.: 如果上板depth较大而下板depth较小（它们的width,height都相同），则只能取出较大的空间（相当于两个上板组成的空间），而不能取到较小的空间（相当于两个下板组成的空间）。
+可准备太阳事件
 
-- 由于pdms数据的问题，造成子柜体的box3大于实际的由它的板组成的box3，这样会造成子柜体的相邻关系计算错误。
-e.g.: 子柜体A和px方向相邻的板B（B与组成子柜体的px方向的板相邻），这时因为如果子柜体的box3->px方向的coplane与B的px方向（正常应该是与B的nx方向）的coplane相交，则B的相邻关系为：
-px:A
-而正常情况下，B的相邻关系应该为：
-nx:A
+
+可去接活
+
+
+* 继续
+能提高影响力
+
+需要处理关系
+
+得到认可
+
+变形
+
+变成公司产品
+
+推广
+
+获得资源
+
+靠自己发展
+
+家庭稳定
+家庭认可度提高
+
+
+与公司绑定到一起
+
+学不到新技术
+
+不能单独搞
+
+
+要融入团队
+
+获得知名度
+
+浪费时间
+
+
+被打压和限制
