--- a/temp.org
+++ b/temp.org
@@ -1,87 +1,2 @@
-* 离职
-完全按自己意愿开发引擎
-
-建立社区
-
-打造自己的影响力
-
-打造自己的产品和公司
-
-
-有生存压力（还好）
-
-
-完全靠自己
-
-
-家庭不稳定
-认可度低
-
-压力一般
-
-完全是自己来开拓
-
-
-
-可继续搞酵素和自由能源
-
-
-可自己做菜
-
-
-
-
-需要时间来慢慢积累影响力
-
-
-长时间单独搞
-
-短时间内不能再去公司（1年内）
-影响职业生涯
-
-
-开始创业生涯
-
-
-可准备太阳事件
-
-
-可去接活
-
-
-* 继续
-能提高影响力
-
-需要处理关系
-
-得到认可
-
-变形
-
-变成公司产品
-
-推广
-
-获得资源
-
-靠自己发展
-
-家庭稳定
-家庭认可度提高
-
-
-与公司绑定到一起
-
-学不到新技术
-
-不能单独搞
-
-
-要融入团队
-
-获得知名度
-
-浪费时间
-
-
-被打压和限制
+发版:
+pub -pt        
